--- a/ui/stylesheets/csui/_header.scss
+++ b/ui/stylesheets/csui/_header.scss
@@ -7,6 +7,7 @@
   );
 
   background-size: auto, cover;
+  border-bottom: 2px solid #0c89d0;
 
   .logo {
     background: url(csui/img/header/logo.png) no-repeat left;
